<resources>
    <string name="app_name">Mehandi</string>
    <string name="book_now">Book</string>
    <string name="details">Details</string>
    <string name="address">GP Rajaratnam Rd, BTS Layout, Arekere, Bengaluru</string>
    <string name="designer_name">Om Mehandi Designer</string>
    <string name="tv_shop_name">Om Mehandi</string>
    <string name="phone_no">Enter your mobile number</string>
    <string name="email">Enter your email ID</string>
    <string name="password">Select your password</string>
    <string name="confirm_password">Please confirm your password</string>
    <string name="submit">Submit</string>
</resources>
